fix image and video width on mobile

--- a/_sass/_mb.scss
+++ b/_sass/_mb.scss
@@ -51,6 +51,7 @@ h1.post-list-heading {
 img, video {
   margin: 15px auto;
   display: block;
+  max-width: 100%;
 }
 
 .post-meta {
